--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,14 @@
 
 buildscript {
     ext {
-        kotlin_version = '1.3.72'
-        material_version = "1.2.0-beta01"
+        kotlin_version = '1.4.10'
+        material_version = "1.3.0-alpha02"
         nav_version = "2.3.0"
         lifecycle_version = "2.2.0"
         moshi_version = '1.9.2'
         lottieVersion = '3.4.0'
         version_retrofit = '2.8.1'
-        version_kotlin_coroutines = "1.1.0"
+        version_kotlin_coroutines = "1.3.7"
         version_retrofit_coroutines_adapter = "0.9.2"
         dagger_version = "2.25.2"
         stetho_version = "1.5.1"
@@ -19,11 +19,11 @@ buildscript {
         rxandroid_version = "2.1.1"
         paging_version = "2.1.2"
         biometric_version = "1.0.1"
-        security_version = "1.0.0-beta01"
-        camerax_version = '1.0.0-beta07'
-        camera_lifecycle_version = "1.0.0-beta07"
-        camera2_version = "1.0.0-beta07"
-        camerax_view = "1.0.0-alpha14"
+        security_version = "1.1.0-alpha02"
+        camerax_version = '1.0.0-beta10'
+        camera_lifecycle_version = "1.0.0-beta10"
+        camera2_version = "1.0.0-beta10"
+        camerax_view = "1.0.0-alpha17"
         exo_player_version = "2.10.5"
         emoji_compat_version = "1.1.0"
         billing_version = "3.0.0"
