--- a/build.gradle
+++ b/build.gradle
@@ -3,54 +3,54 @@
 buildscript {
     ext {
         //Kotlin
-        kotlin_version = '1.4.10'
+        kotlin_version = '1.3.72'
         core_ktx_version = '1.3.1'
 
         //Android
-        billing_version = "3.0.1"
+        billing_version = "3.0.0"
 
         //Google
         exo_player_version = "2.10.5"
-        firebase_cloud_messaging_version = "20.3.0"
+        firebase_cloud_messaging_version = "20.1.7"
         firebase_crashlytics_version = "17.2.2"
-        firebase_remote_config_version = "19.2.0"
-        firebase_storage_version = "19.2.0"
+        firebase_remote_config_version = "19.1.4"
+        firebase_storage_version = "19.1.1"
         google_analytics_version = "17.5.0"
         google_maps_utils_version = "1.2.1"
-        google_material_version = "1.3.0-alpha03"
-        google_places_version = "2.4.0"
-        play_services_location_version = "17.1.0"
+        google_material_version = "1.2.0-beta01"
+        google_places_version = "2.3.0"
+        play_services_location_version = "17.0.0"
         play_services_maps_version = "17.0.0"
 
         //AndroidX
-        app_compat_version = "1.3.0-alpha02"
+        app_compat_version = "1.3.0-alpha01"
         biometric_version = "1.0.1"
         camera2_version = "1.0.0-beta10"
         camerax_version = '1.0.0-beta10'
         camera_lifecycle_version = "1.0.0-beta10"
         camerax_view = "1.0.0-alpha17"
-        constraint_layout_version = "2.0.1"
+        constraint_layout_version = "1.1.3"
         emoji_compat_version = "1.1.0"
         legacy_support_version = "1.0.0"
         lifecycle_version = "2.2.0"
         navigation_version = "2.3.0"
         paging_version = "2.1.2"
-        recyclerview_version = "1.0.0"
+        recyclerview_version = "1.1.0"
         room_version = "2.2.5"
-        security_version = "1.1.0-alpha02"
+        security_version = "1.0.0-beta01"
 
         //Terceros
-        dagger_version = "2.28.3"
+        dagger_version = "2.25.2"
         giphy_version = "1.2.2"
         glide_version = "4.11.0"
         image_compressor_version = "3.0.0"
         io_socket_version = "1.0.0"
-        lottie_version = '3.4.2'
-        moshi_version = '1.9.3'
+        lottie_version = '3.4.0'
+        moshi_version = '1.9.2'
         permissions_dexter_version = "6.1.2"
         pusher_version = "2.2.1"
-        retrofit_version = '2.9.0'
-        retrofit_coroutines_version = "1.3.8"
+        retrofit_version = '2.8.1'
+        retrofit_coroutines_version = "1.1.0"
         rxkotlin_version = "2.4.0"
         rxandroid_version = "2.1.1"
         stetho_version = "1.5.1"
@@ -59,9 +59,9 @@ buildscript {
         web_rtc_version = "1.0.30039"
 
         //Test
-        junit_version = "4.13"
-        junit_ext_version = "1.1.2"
-        espresso_core_version = "3.3.0"
+        junit_version = "4.12"
+        junit_ext_version = "1.1.1"
+        espresso_core_version = "3.2.0"
 
     }
 
