--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,17 @@
 
 buildscript {
     ext {
-        //Kotlin
+        
+        //region Kotlin
         kotlin_version = '1.4.10'
         core_ktx_version = '1.3.2'
+        //endregion
 
-        //Android
+        //region Android
         billing_version = "3.0.1"
+        //endregion
 
-        //Google
+        //region Google
         exo_player_version = "2.10.5"
         firebase_cloud_messaging_version = "20.3.0"
         firebase_crashlytics_version = "17.2.2"
@@ -21,8 +24,9 @@ buildscript {
         google_places_version = "2.4.0"
         play_services_location_version = "17.1.0"
         play_services_maps_version = "17.0.0"
+        //endregion
 
-        //AndroidX
+        //region AndroidX
         biometric_version = "1.0.1"
         camera2_version = "1.0.0-beta10"
         camerax_version = '1.0.0-beta10'
@@ -37,8 +41,9 @@ buildscript {
         recyclerview_version = "1.0.0"
         room_version = "2.2.5"
         security_version = "1.1.0-alpha02"
+        //endregion
 
-        //Terceros
+        //region Terceros
         dagger_version = "2.28.3"
         giphy_version = "1.2.2"
         glide_version = "4.11.0"
@@ -56,11 +61,13 @@ buildscript {
         timber_version = "4.7.1"
         ucrop_version = "2.2.4"
         web_rtc_version = "1.0.30039"
+        //endregion
 
-        //Test
+        //region Test
         junit_version = "4.13"
         junit_ext_version = "1.1.2"
         espresso_core_version = "3.3.0"
+        //endregion
 
     }
 
