--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ android {
         targetSdkVersion 30
         versionCode 16
 
-        versionName "1.0.0-interna16"
+        versionName "1.0.0.17"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         vectorDrawables.useSupportLibrary = true
