--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,22 @@ android {
             buildConfigField("boolean", "ENCRYPT_SHARED_PREFERENCES", "false")
             buildConfigField("String", "PUSHER_KEY", "\"36880baf488e08473554\"")
         }
+        /*pepito {
+            debuggable true
+            buildConfigField("String", "BASE_URL", "\"https://pepito.napoleon-chat.com/api/\"")
+            buildConfigField("String", "HOST_URL", "\"pepito.napoleon-chat.com\"")
+            buildConfigField("String", "STUN_SERVER", "\"stun:stun-pepito.napoleon-chat.com:3478\"")
+            buildConfigField("String", "TURN_SERVER", "\"turn:turn-pepito.napoleon-chat.com:3478\"")
+            buildConfigField("String", "SOCKET_BASE_URL", "\"https://pepito.napoleon-chat.com/broadcasting/auth\"")
+            buildConfigField("String", "KEY_OF_KEYS", "\"c6a45c9c226f72230c4fa1bd4d67f06687a97614\"")
+            buildConfigField("boolean", "ENCRYPT_API", "false")
+            buildConfigField("boolean", "ENCRYPT_SHARED_PREFERENCES", "false")
+            buildConfigField("String", "PUSHER_KEY", "\"6a11211af223541f2069\"")
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
+            matchingFallbacks = ['debug', 'release']
+        }*/
         release {
             buildConfigField("String", "BASE_URL", "\"https://prod.napoleon-chat.com/api/\"")
             buildConfigField("String", "HOST_URL", "\"prod.napoleon-chat.com\"")
