--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ android {
         targetSdkVersion 30
         versionCode 33
 
-        versionName "1.1.33.FIX-SESSION"
+        versionName "1.1.33.FIX-CONN"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         vectorDrawables.useSupportLibrary = true
