--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,23 @@ android {
             signingConfig signingConfigs.config
             matchingFallbacks = ['debug', 'release']
         }
+        /*CONN*/
+        conn {
+            debuggable true
+            buildConfigField("String", "BASE_URL", "\"https://conn.napoleon-chat.com/api/\"")
+            buildConfigField("String", "HOST_URL", "\"conn.napoleon-chat.com\"")
+            buildConfigField("String", "STUN_SERVER", "\"stun:stun-prod.napoleon-chat.com:3478\"")
+            buildConfigField("String", "TURN_SERVER", "\"turn:turn-prod.napoleon-chat.com:3478\"")
+            buildConfigField("String", "SOCKET_BASE_URL", "\"https://conn.napoleon-chat.com/broadcasting/auth\"")
+            buildConfigField("String", "KEY_OF_KEYS", "\"c6a45c9c226f72230c4fa1bd4d67f06687a97614\"")
+            buildConfigField("boolean", "ENCRYPT_API", "true")
+            buildConfigField("boolean", "ENCRYPT_SHARED_PREFERENCES", "false")
+            buildConfigField("String", "PUSHER_KEY", "\"9f3ae4bc675ddf6190a3\"")
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
+            matchingFallbacks = ['debug', 'release']
+        }
         /*QA*/
         qa {
             debuggable true
