--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,11 @@ android {
             }
         }
     }
+
+    androidExtensions {
+        experimental = true
+    }
+
     buildTypes {
         /*Produccion*/
         release {
@@ -346,6 +351,10 @@ dependencies {
 
     //Video Compressor
     implementation project(':videocompressor')
+
+    implementation "com.xwray:groupie:$groupie_version"
+    implementation "com.xwray:groupie-viewbinding:$groupie_version"
+    implementation "com.xwray:groupie-kotlin-android-extensions:$groupie_version"
     //endregion
 
 }
