--- a/gradle.properties
+++ b/gradle.properties
@@ -14,5 +14,6 @@
 kotlin.code.style=official
 android.enableJetifier=true
 #org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
-org.gradle.jvmargs=-Xmx4608m
 android.useAndroidX=true
+org.gradle.daemon=false
+org.gradle.jvmargs=-XX:MaxPermSize=1024m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
