--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,9 +25,9 @@ android {
         applicationId "com.naposystems.napoleonchat"
         minSdkVersion 24
         targetSdkVersion 30
-        versionCode 38
+        versionCode 39
 
-        versionName "1.1.37-FIX-CALL"
+        versionName "1.1.39-FIX-CALL-Alejo"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         vectorDrawables.useSupportLibrary = true
