--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
         tools:ignore="GoogleAppIndexingWarning,UnusedAttribute"
         tools:replace="android:allowBackup"
         tools:targetApi="n">
-        <activity android:name=".ui.previewmulti.MultipleAttachmentPreviewActivity"></activity>
+        <activity android:name=".ui.multipreview.MultipleAttachmentPreviewActivity"></activity>
         <activity android:name=".ui.multi.MultipleAttachmentActivity" />
 
         <service android:name=".webRTC.service.WebRTCService" />
