--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,8 @@
 
         <service android:name=".service.multiattachment.MultipleUploadService" />
 
+        <service android:name=".service.download.DownloadAttachmentsService" />
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyDcAkhqRS4BO-BoKM89HiXuR4ruLr8fj1w" />
