--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,9 +13,7 @@ apply plugin: 'com.google.firebase.crashlytics'
 android {
     signingConfigs {
         config {
-            storeFile file('E:\\Proyectos\\NapoleoN\\JKS\\pepito.jks')
-//            storeFile file('\\pepito.jks')
-//            storeFile file(String.valueOf(System.getenv("JKS_KEY_PATH")))
+            storeFile file(String.valueOf(System.getenv("JKS_KEY_PATH")))
             keyAlias = 'napoleonsecretchat'
             storePassword 'gQADhnGTHEcQAn9U'
             keyPassword 'gQADhnGTHEcQAn9U'
@@ -27,9 +25,9 @@ android {
         applicationId "com.naposystems.napoleonchat"
         minSdkVersion 24
         targetSdkVersion 30
-        versionCode 60
+        versionCode 62
 
-        versionName "1.1.60 QA"
+        versionName "1.1.62 QA"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         vectorDrawables.useSupportLibrary = true
