--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ apply plugin: 'com.google.firebase.crashlytics'
 android {
     signingConfigs {
         config {
-            storeFile file("E:\\Proyectos\\NapoleoN\\JKS\\pepito.jks")
+            storeFile file("pepito.jks")
 //            storeFile file(String.valueOf(System.getenv("JKS_KEY_PATH")))
             keyAlias = 'napoleonsecretchat'
             storePassword 'gQADhnGTHEcQAn9U'
@@ -38,7 +38,8 @@ android {
                 arguments = [
                         "room.schemaLocation"  : "$projectDir/schemas".toString(),
                         "room.incremental"     : "true",
-                        "room.expandProjection": "true"]
+                        "room.expandProjection": "true"
+                ]
             }
         }
     }
