--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ apply plugin: 'com.google.firebase.crashlytics'
 android {
     signingConfigs {
         config {
-            storeFile file("D:\\Proyectos_NN\\Desarrollo\\Llaves JKS Android\\pepito.jks")
+            storeFile file("pepito.jks")
 //            storeFile file(String.valueOf(System.getenv("JKS_KEY_PATH")))
             keyAlias = 'napoleonsecretchat'
             storePassword 'gQADhnGTHEcQAn9U'
