--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,7 @@ apply plugin: 'com.google.firebase.crashlytics'
 android {
     signingConfigs {
         config {
-            storeFile file("E:\\Proyectos\\NapoleoN\\JKS\\pepito.jks")
-//            storeFile file(String.valueOf(System.getenv("JKS_KEY_PATH")))
+            storeFile file(String.valueOf(System.getenv("JKS_KEY_PATH")))
             keyAlias = 'napoleonsecretchat'
             storePassword 'gQADhnGTHEcQAn9U'
             keyPassword 'gQADhnGTHEcQAn9U'
@@ -26,7 +25,7 @@ android {
         applicationId "com.naposystems.napoleonchat"
         minSdkVersion 24
         targetSdkVersion 30
-        versionCode 67
+        versionCode 69
 
         versionName "1.1.64 QA"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
