--- a/app/build.gradle
+++ b/app/build.gradle
@@ -130,10 +130,11 @@ android {
         }
         /*DEV*/
         debug {
+            debuggable true
             buildConfigField("String", "BASE_URL", "\"https://dev.napoleon-chat.com/api/\"")
             buildConfigField("String", "HOST_URL", "\"dev.napoleon-chat.com\"")
-            buildConfigField("String", "STUN_SERVER", "\"stun:stun-dev.napoleon-chat.com:3478\"")
-            buildConfigField("String", "TURN_SERVER", "\"turn:turn-dev.napoleon-chat.com:3478\"")
+            buildConfigField("String", "STUN_SERVER", "\"stun:stun-prod.napoleon-chat.com:3478\"")
+            buildConfigField("String", "TURN_SERVER", "\"turn:turn-prod.napoleon-chat.com:3478\"")
             buildConfigField("String", "SOCKET_BASE_URL", "\"https://dev.napoleon-chat.com/broadcasting/auth\"")
             buildConfigField("String", "KEY_OF_KEYS", "\"c6a45c9c226f72230c4fa1bd4d67f06687a97614\"")
             buildConfigField("boolean", "ENCRYPT_API", "false")
