--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,14 +13,15 @@ apply plugin: 'com.google.firebase.crashlytics'
 android {
     signingConfigs {
         config {
-            storeFile file(String.valueOf(System.getenv("JKS_KEY_PATH")))
+            //storeFile file(String.valueOf(System.getenv("JKS_KEY_PATH")))
+            storeFile file("\\pepito.jks")
             keyAlias = 'napoleonsecretchat'
             storePassword 'gQADhnGTHEcQAn9U'
             keyPassword 'gQADhnGTHEcQAn9U'
         }
     }
     compileSdkVersion 30
-    buildToolsVersion "29.0.3"
+    buildToolsVersion "30.0.2"
     defaultConfig {
 
         applicationId "com.naposystems.napoleonchat"
